--- a/src/pages/settings/enpoint-container/EndpointContainer.scss
+++ b/src/pages/settings/enpoint-container/EndpointContainer.scss
@@ -9,7 +9,7 @@
             }
 
             &.nexus-c-search-wrapper-padding-right {
-                padding-right: 3px;
+                padding-right: 10px;
             }
 
             .nexus-c-search__inputbox {
