--- a/src/pages/title-metadata/components/nexus-field-extarnal-ids/ExternalIDsSection.scss
+++ b/src/pages/title-metadata/components/nexus-field-extarnal-ids/ExternalIDsSection.scss
@@ -27,3 +27,11 @@
     letter-spacing: 1px;
     line-height: normal;
 }
+
+.external-ids-section {
+    .nexus-c-entity {
+        .nexus-c-entity-panel {
+            padding: 0 0;
+        }
+    }
+}
