--- a/src/pages/title-metadata/components/titleCreateModal/Title.scss
+++ b/src/pages/title-metadata/components/titleCreateModal/Title.scss
@@ -40,15 +40,13 @@
     margin-bottom: 18px;
 }
 
-.nexus-c-title-create_dialog {
-    .nexus-c-create-title-overview-header,
-    .nexus-c-create-title-publish-header {
-        .nexus-c-entity {
-            .nexus-c-entity-panel {
-                &.container-fluid {
-                    padding: 0 0;
-                }
-            }
-        }
-    }
-}
+//.nexus-c-title-create_dialog {
+//    .nexus-c-create-title-overview-header,
+//    .nexus-c-create-title-publish-header {
+//        .nexus-c-entity {
+//            .nexus-c-entity-panel {
+//                padding: 0 0;
+//            }
+//        }
+//    }
+//}
